--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,47 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% block coremeta %}
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 
+    {% block extra_meta %}
+    {% endblock %}
+
+    {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    {% endblock %}
 
-    <title>Boutique Ado</title>
+    {% block extra_css %}
+    {% endblock %}
+
+    <title>Boutique Ado {% block core_title %}{% endblock %}</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header class="container-fluid fixed-top">
 
+    </header>
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% if messages %}
+        <div class="message-container">
+
+        </div>
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block corejs %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    {% endblock %}
+
+    {% block extra_js %}
+    {% endblock %}
 
   </body>
 </html>
