--- a/templates/base.html
+++ b/templates/base.html
@@ -25,18 +25,15 @@
   </head>
 
   <body>
-
-      {% block page_header %}
-          <header class="container-fluid fixed-top">
-              <div class="row">
-                  <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                      <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                          <h2 class="logo-font text-black my-0"><strong>Boutique</strong> Ado</h2>
-                      </a>
-                  </div>
+      <header class="container-fluid fixed-top">
+          <div class="row">
+              <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                  <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                      <h2 class="logo-font text-black my-0"><strong>Boutique</strong> Ado</h2>
+                  </a>
               </div>
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                  <form method="GET" action="{% url 'products' %}">
+                  <form method="GET" action="">
                       <div class="input-group w-100">
                           <input class="form-control border border-black rounded-0" type="text" name="q"
                               placeholder="Search our site">
@@ -53,7 +50,7 @@
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                   <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                       <li class="list-inline-item dropdown">
-                          <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                          <a class="text-black nav-link" href="#" id="user-options" data-bs-toggle="dropdown"
                               aria-haspopup="true" aria-expanded="false">
                               <div class="text-center">
                                   <div><i class="fas fa-user fa-lg"></i></div>
@@ -73,24 +70,25 @@
                               {% endif %}
                           </div>
                       </li>
-                      <li class="list-inline-item"></li>
-                      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                          href="{% url 'view_bag' %}">
-                          <div class="text-center">
-                              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                              <p class="my-0">
-                                  {% if grand_total %}
-                                      ${{ grand_total|floatformat:2 }}
-                                  {% else %}
-                                      $0.00
-                                  {% endif %}
-                              </p>
-                          </div>
-                      </a>
+                      <li class="list-inline-item">
+                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                              href="">
+                              <div class="text-center">
+                                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                  <p class="my-0">
+                                      {% if grand_total %}
+                                          ${{ grand_total|floatformat:2 }}
+                                      {% else %}
+                                          $0.00
+                                      {% endif %}
+                                  </p>
+                              </div>
+                          </a>
+                      </li>
                   </ul>
               </div>
-          </header>
-    {% endblock %}
+          </div>
+      </header>
 
     {% if messages %}
       <div class="message-container">
@@ -102,9 +100,10 @@
     {% endblock %}
 
     {% block corejs %}
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-      </script>
+       
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        
     {% endblock %}
 
     {% block extra_js %}
