--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,8 +3,8 @@
 
 {% block page_header %}
     <div class="container header-container">
-        <div class="col">
-            <div class="row"></div>
+        <div class="row">
+            <div class="col"></div>
         </div>
     </div>
 {% endblock %}
