--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,10 @@
       {% endblock %}
 
       {% block corecss %}
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+            <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <script src="https://kit.fontawesome.com/f0ca44b893.js" crossorigin="anonymous"></script>
       {% endblock %}
 
       {% block extra_css %}
@@ -26,7 +28,7 @@
 
   <body>
       <header class="container-fluid fixed-top">
-          <div class="row">
+          <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                   <a href="{% url 'home' %}" class="nav-link main-logo-link">
                       <h2 class="logo-font text-black my-0"><strong>Boutique</strong> Ado</h2>
@@ -95,6 +97,9 @@
 
       </div>
     {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
 
     {% block content %}
     {% endblock %}
