--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,7 @@
       height: calc(100vh - 164px);
       color: #555;
       font-family: 'Lato';
+      z-index: -2;
   }
 
   /* from Bulma */
@@ -60,6 +61,20 @@
 
   .bg-black {
       background-color: #000 !important;
+  }
+
+  hr {
+      margin: auto;
+  }
+
+  .overlay {
+      background-color: white;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      z-index: -1;
   }
 
   /* -------------------------------- Media Queries */
