--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -13,9 +13,9 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Shopping bag</h2>
+            <div class="col mb-1 mt-4">
+                <hr class="mb-3">
+                <h2 class="logo-font mb-3">Shopping bag</h2>
                 <hr>
             </div>
         </div>
@@ -26,7 +26,7 @@
 
                     </div>
                 {% else %}
-                    <p class="lead mb-5">Your bag is empty</p>
+                    <p class="lead  mt-3 mb-5">Your bag is empty</p>
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
