--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -23,7 +23,7 @@
             <div class="col">
                 {% if bag_items %}
                     <div class="table-responsive rounded">
-
+                        {{ bag_items }}
                     </div>
                 {% else %}
                     <p class="lead  mt-3 mb-5">Your bag is empty</p>
