--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,20 @@
       cursor: pointer;
   }
 
+  .message-container {
+      position: fixed;
+      top: 45px;
+      right: 15px;
+      z-index: 99999999;
+  }
+
+  .custom-toast {
+      overflow: visible;
+  }
+
+  .toast-capper {
+      height: 2px;
+  }
 
   /* -------------------------------- Media Queries */
 
