--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,9 @@
 
     {% if messages %}
         <div class="message-container">
-
+            {% for message in messages %}
+                {% include 'includes/toasts/toasts_success.html' %}
+            {% endfor %}
         </div>
     {% endif %}
 
@@ -134,6 +136,13 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+        var toastList = toastElList.map(function(toastEl) {
+        // Creates an array of toasts (it only initializes them)
+        return new bootstrap.Toast(toastEl).show() // No need for options; use the default options 
+        });
+    </script>
     {% endblock %}
 
 </body>
