--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,17 @@
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
-                {% include 'includes/toasts/toasts_success.html' %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toasts_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toasts_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toasts_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toasts_info.html' %}
+                    {% endif %}
+                {% endwith %}
             {% endfor %}
         </div>
     {% endif %}
@@ -123,6 +133,7 @@
 
     {% block corejs %}
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
             integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
         </script>
@@ -136,6 +147,7 @@
     {% endblock %}
 
     {% block postloadjs %}
+    {{ block.super }
     <script type="text/javascript">
         var toastElList = [].slice.call(document.querySelectorAll('.toast'))
         var toastList = toastElList.map(function(toastEl) {
