--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
         </script>
+        <script src="https://js.stripe.com/v3/"></script>
 
     {% endblock %}
 
@@ -147,7 +148,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    {{ block.super }
+    {{ block.super }}
     <script type="text/javascript">
         var toastElList = [].slice.call(document.querySelectorAll('.toast'))
         var toastList = toastElList.map(function(toastEl) {
