--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <form action="{% url 'add_product' }%" method="POST" class="form mb-2" enctype="multipart/form-data">
-                    {{ csrf_token }}
+                    {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-end">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
